objects/Environment__c.object
<CustomObject>
    <description>Used to capture Sandbox creation requests</description>
    <fields>
        <fullName>Assesment_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 214 KB</inlineHelpText>
        <label>Assesment Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 50 KB</inlineHelpText>
        <label>Assessment Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Risk_Escalation_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 700 KB</inlineHelpText>
        <label>Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CICycle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will allow us to distinguish from CI sandboxes and other development sandboxes.</description>
        <label>CI Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseClassification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 20.9 KB</inlineHelpText>
        <label>Case Classification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Rotating</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitorCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size: 8.8 MB</inlineHelpText>
        <label>Competitor Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size: 3 MB</inlineHelpText>
        <label>Competitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 490 KB</inlineHelpText>
        <label>Countries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussion_Topics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size: 488KB</inlineHelpText>
        <label>Discussion Topics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 1.4 MB</inlineHelpText>
        <label>Organization Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_with__c</fullName>
        <label>Integrated with</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMR</fullName>
                </value>
                <value>
                    <fullName>Inquira</fullName>
                </value>
                <value>
                    <fullName>Quotation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size: 20 KB</inlineHelpText>
        <label>Local Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MarketingCallbackLimit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 6 KB</inlineHelpText>
        <label>Marketing Callback Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PageLayoutDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Page Layout Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 8 MB</inlineHelpText>
        <label>Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requestedby</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Entities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 408 KB</inlineHelpText>
        <label>Sales Entities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SellingCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size: 2.4 MB</inlineHelpText>
        <label>Selling Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceMaxConfigData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceMax Config Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceMaxNotes__c</fullName>
        <defaultValue>&quot;The access to Service Max is strictly against appropriate Justification. The installation of Service Max requires a minimum of 12 hrs which results in the delay in setting up the sandbox.So please make sure you absolutely need the application before checking the check box.&quot;</defaultValue>
        <label>&lt;ServiceMaxNotes&gt;</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceMaxProcesses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceMax Processes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceMaxPropertyDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceMax Property Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceMax_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The ServiceMax implementation will take 12 hours.</inlineHelpText>
        <label>ServiceMax Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SolutionCenterCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solution Center Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Centre__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 576 KB</inlineHelpText>
        <label>Solution Centre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Provinces__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 3.4 MB</inlineHelpText>
        <label>State / Provinces</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Limit__c</fullName>
        <formula>CASE(Type__c, &quot;Full copy&quot;,
&quot;As Production&quot;, &quot;Developer Pro&quot;, &quot;1 GB&quot;, &quot;Developer&quot;,&quot;200 MB&quot;,&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Storage Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplying_Plant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 14.1 MB</inlineHelpText>
        <label>Supplying Plant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Data Size : 376 KB</inlineHelpText>
        <label>Symptom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_with_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if you want to have master data same as it is in production.</inlineHelpText>
        <label>Sync with Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SynchronisationRegime__c</fullName>
        <label>Synchronisation Regime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full copy</fullName>
                </value>
                <value>
                    <fullName>Developer Pro</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>Active_Sandboxes</fullName>
        <columns>NAME</columns>
        <columns>End_date__c</columns>
        <columns>Start_date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>Active Sandboxes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Start_date__c</columns>
        <columns>End_date__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Requested_by__c</columns>
        <columns>Purpose__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Sandbox_Requests</fullName>
        <columns>NAME</columns>
        <columns>Start_date__c</columns>
        <columns>Type__c</columns>
        <columns>Requested_by__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>All Sandbox Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CI_Cycle</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SynchronisationRegime__c</columns>
        <columns>Purpose__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Environment__c.Branch</value>
        </filters>
        <label>CI Cycle Branches</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CI_Cycle_Sandboxes</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SynchronisationRegime__c</columns>
        <columns>Status__c</columns>
        <columns>Start_date__c</columns>
        <columns>Purpose__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Environment__c.Sandbox</value>
        </filters>
        <filters>
            <field>CICycle__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CI Cycle Sandboxes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deleted_Sandboxes</fullName>
        <columns>NAME</columns>
        <columns>Start_date__c</columns>
        <columns>End_date__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requested_by__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deleted</value>
        </filters>
        <label>Deleted Sandboxes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deleted_Sandboxes_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Start_date__c</columns>
        <columns>End_date__c</columns>
        <columns>Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requested_by__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deleted</value>
        </filters>
        <filters>
            <field>End_date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Deleted Sandboxes - Last Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Refreshed_Sandboxes</fullName>
        <columns>NAME</columns>
        <columns>End_date__c</columns>
        <columns>Start_date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Refreshed</value>
        </filters>
        <label>Refreshed Sandboxes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2016_Environments</fullName>
        <columns>NAME</columns>
        <columns>Start_date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CICycle__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2016 Environments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2017_Environments</fullName>
        <columns>NAME</columns>
        <columns>Start_date__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/31/2016 12:00 AM</value>
        </filters>
        <label>2017 Environments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <recordTypes>
        <fullName>Branch</fullName>
        <active>true</active>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sandbox</fullName>
        <active>true</active>
        <label>Sandbox</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ENV_VR01_Startdate_and_EnddateValidation</fullName>
        <active>true</active>
        <description>To Check the Start date and End date.</description>
        <errorConditionFormula>IF( End_date__c &lt; Start_date__c , True,false)</errorConditionFormula>
        <errorDisplayField>End_date__c</errorDisplayField>
        <errorMessage>End date should be greater than Start date</errorMessage>
    </validationRules>
</CustomObject>